# unica

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/plugins/: marketplace.json
.github/workflows/: unica-plugin-release.yml
crates/unica-coder/: Cargo.toml
crates/unica-coder/src/: lib.rs  main.rs
crates/unica-coder/src/application/: mod.rs  operation_descriptors.rs  ports.rs  tool_contracts.rs
crates/unica-coder/src/domain/: workspace.rs
crates/unica-coder/src/infrastructure/: bundled_tools.rs  internal_adapters.rs  legacy_scripts.rs  mod.rs  native_operations.rs  path_policy.rs  plugin_runtime.rs  workspace_discovery.rs  workspace_index.rs  workspace_services.rs
crates/unica-coder/src/infrastructure/native_operations/: cf.rs  cfe.rs  common.rs  form.rs  help.rs  interface.rs  meta.rs  mxl.rs  registry.rs  role.rs  skd.rs  subsystem.rs  support.rs  template.rs
crates/unica-coder/src/interfaces/: mcp.rs  mod.rs  workspace_service.rs
docs/releases/: v0.5.1.md
plugins/unica/: .mcp.json  README.md
scripts/: install-unica.ps1  install-unica.sh
scripts/ci/: build-unica-tools.py  check-skill-upstreams.py  check-tool-contracts.py  classify-workflow-changes.py  harvest-bsp-parity-fixtures.py  package-unica-plugin.py  release-assessment.py
scripts/dev/: install-local-unica.sh
spec/: IMPLEMENTATION_TODO.md
spec/acceptance/: unica-mcp-validation.md
spec/architecture/: change-checklist.md  invariants.md
spec/decisions/: 0001-edinyy-publichnyy-mcp-unica.md  0004-legacy-skill-scripts-are-migration-debt.md  README.md  (+3 more)
(+141 files in other folders)
