[workspace]
members = ["crates/unica-coder"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/IngvarConsulting/unica"

[workspace.dependencies]
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
