[package]
name = "unica-coder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica"
path = "src/main.rs"

[lib]
name = "unica_coder"
path = "src/lib.rs"

[dependencies]
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
ureq.workspace = true
